--- a/src/index.css
+++ b/src/index.css
@@ -22,7 +22,7 @@ html {
 
 .resume{
   width: 100%;
-  max-width: 849px; /* or any specific width */
+  max-width: 700px; 
   aspect-ratio: 29.7 / 21;
   display: block;
   margin: auto;
